# senior_mhealth_lecture

./: .env.example  .firebaserc.template  .gcloudignore  .gitattributes  .gitignore  .pre-commit-config.yaml  .vercelignore  README.md  SETUP_GUIDE_STUDENTS.md  docker-compose.ai.yml  firebase.json  firestore.rules  package-lock.json  package.json  project.config.template.json  setup-project.sh
backend/libraries/voice_analysis/analysis/: .gitignore  pyproject.toml  setup.cfg
backend/libraries/voice_analysis/analysis/core/: __init__.py  comprehensive_interpreter.py  indicators.py  large_file_analyzer.py  sincnet_analysis.py  text_analysis.py  voice_analysis.py
backend/libraries/voice_analysis/analysis/mental_health/: README.md  clinical_validation.py  korean_elderly_finetuning.py  mental_health_indicators.py  optimized_weight_calculator.py  senior_voice_features.py  sincnet_analyzer.py
backend/libraries/voice_analysis/analysis/pipeline/: __init__.py  ai_speaker_identifier.py  main_pipeline.py  report_generator.py  speaker_identifier.py
backend/libraries/voice_analysis/analysis/sincnet/: __init__.py  audio_processor.py  model_manager.py  original_sincnet_analyzer.py  original_sincnet_model.py
backend/libraries/voice_analysis/analysis/timeseries/: __init__.py  baseline_manager.py  change_detector.py  early_warning.py  pattern_detector.py  predictor.py  risk_predictor.py  trend_analyzer.py
backend/libraries/voice_analysis/analysis/utils/: api_connectors.py  data_loader.py  env.py  firebase_storage_connector.py  firestore_connector.py  interface_validator.py  (+3 more)
(+354 files in other folders)
